--- a/.eslintrc
+++ b/.eslintrc
@@ -7,5 +7,13 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
+  },
+  "rules": {
+    "no-console": ["warn"],
+    "indent": ["warn", 2],
+    "quotes": ["warn", "double"],
+    "semi": ["error", "always"],
+    "no-unused-vars": ["warn"],
+    "camelcase": ["warn"]
   }
 }
